<resources>
    <string name="app_name">eCap-CoDe</string>
    <string name="prefix">Prefix</string>
    <string name="suffix">Suffix</string>
    <string name="blood_group">Blood Group</string>
    <string name="marital_status">Marital Status</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="nin">Nin/Psssport</string>
    <string name="phone">Phone Number</string>
    <string name="dob">Date Of Birth</string>
    <string name="age">Age</string>
    <string name="sex">Sex/Gender</string>
    <string name="other_name">Other Name</string>
    <string name="personal_information">Personal Information</string>
    <string name="ethnicity_information">Ethnicity Information</string>
    <string name="tribe">Tribe</string>
    <string name="main_language_spoken">Main Language Spoken</string>
    <string name="nationality">Nationality</string>
    <string name="district">District</string>
    <string name="religion">Religion</string>
    <string name="next">Next</string>
    <string name="patients">Data Capture</string>
    <string name="feedback">Feedback</string>
    <string name="training">Training</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">eCap-CoDe</string>
    <string name="register_new">Register New</string>
    <string name="please_login">Please Login to your account</string>
    <string name="your_username">Your Username</string>
    <string name="your_password">Your password</string>
    <string name="sign_in">Sign in</string>

    <string name="warning_form_closing">Warning: Form closing</string>
    <string name="are_you_sure_you_want_to_exit_this_form_you_will_lose_all_and_any_data_that_you_had_already_filled">Are you sure you want to exit this form? You will lose all and any data that you had already filled</string>
    <string name="no_stay_on_page">NO. STAY ON PAGE</string>
    <string name="yes_leave">YES. LEAVE</string>
    <string name="account">Logout</string>

    <string name="logout_warning">Are you sure you want to logout? You will loose all saved data</string>
    <string name="yes_logout">Yes. Log me out</string>
    <string name="cancel">Cancel</string>
    <string name="visit_information">Visit information</string>
    <string name="triage_code">Triage Code</string>
    <string name="attendance_code">Attendance Code</string>
    <string name="specialProgram">Special Program</string>
    <string name="encounter_cl">Encounter Class</string>
    <string name="admission_type">Admission Type</string>
    <string name="encoouter_type">Encounter Type</string>
    <string name="visit_st">Visit Status</string>
    <string name="mode_of_arr">Mode Of Arrival</string>
    <string name="level_care">Level Of Care</string>
    <string name="condi">Patient Condition</string>
    <string name="visit_reason">Visit Reason</string>
    <string name="textview">Clerk Information</string>
    <string name="illness_history">History Of Condition</string>
    <string name="review_of_systems">Review of Systems</string>
    <string name="physical_exa">Physical Examination</string>
    <string name="chief_comp">Chief Complaint</string>
    <string name="dementia_assessmet">Dementia Assessmet</string>
    <string name="forgetfulness"><![CDATA[Decline or problems with memory (severe forgetfulnes) and orientation (time, place & person)]]></string>
    <string name="apathy">Mood or behavioural problems such as apathy (appearing uninterested) or irritability</string>
    <string name="emotion">Loss of emotional control-easily upset, irritable, or tearful</string>
    <string name="activities">Difficulties in carrying out usual work, domestic, or social activities</string>
    <string name="_2_signs_of_dementia">Signs of dementia</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="memory_problems">Are there problems with memory and/or orientation?</string>
    <string name="key_roles">Does the person have difficulties in performing key roles/activities?</string>
    <string name="progressing">Have the symptoms been present and slowly\nprogressing for at least 6 months?</string>
    <string name="any_of">Does patient have any of– Abrupt onset\n– Short duration (days to weeks)\n– Disturbance at night and associatedwith impairment of \tconsciousness\n– Disorientation of time and place</string>
    <string name="depress">Does the person have moderate to severe DEPRESSION?</string>
    <string name="other_any">Does the person have ANY of the following?\n- Less than 60 years old prior to symptom onset\n- Onset of symptoms associated with head injury, stroke,or altered or loss of consciousness\n- Clinical history of goitre, slow pulse, dry skin (hypothyroidism)\n- History of sexually transmitted infection (STI),including HIV/AIDS</string>
    <string name="anaemia">Does the person have poor dietary intake, malnutrition, or anaemia?</string>
    <string name="_3_explanation_for_symptoms">Explanation for symptoms</string>
    <string name="_4_other_medical_issues">Other medical issues</string>
    <string name="cardio">Does the person have cardiovascular risk factors?\n– Hypertension\n– High cholesterol\n– Diabetes\n– Smoking\n– Obesity\n– Heart disease (chest pain, heart attack)\n– Previous stroke or transient ischaemic\nattack (TIA)</string>
    <string name="caretaker_needs">Caretaker needs</string>
    <string name="caretaker">Is the carer having difficulty coping or experiencing strain?</string>
    <string name="care_mood">Is the carer experiencing depressed mood?</string>
    <string name="care_income">Is the carer facing loss of income and/or additional expenses because of the needs for care?</string>
    <string name="_5_behavioral_or_pyscological_symptoms">5. Behavioral or Pyscological symptoms</string>
    <string name="behavior">Behavioural symptoms, e.g.\nWandering\nNight-time disturbance\nAgitation\nAggression\n\nPsychological symptoms, e.g.\nHallucinations\nDelusions\nAnxiety\nUncontrollable emotional outbursts</string>
    <string name="occupation">Occupation</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="dementia_management_care"><![CDATA[Dementia Management & care]]></string>
    <string name="dementia_assessment">Dementia Assessment</string>
    <string name="feedback_on_your_performance_on_demetia_management">Feedback on your performance on demetia management</string>
    <string name="strengths">Your Strengths</string>
    <string name="improve">Areas to improve</string>
    <string name="finish_assessement">Finish Assessement</string>
    <string name="dementia_assessment_quiz">Dementia Assessment Qiuz</string>
    <string name="your_anser_was_1_d_2_s">Your anser was: %1$d - %2$s</string>
    <string name="welcome">Welcome.</string>
    <string name="please_complete_the_quiz_below_to_acess_app_content">Please complete the quiz below to acess app content.</string>
    <string name="next_page">Next Page</string>
    <string name="previous_page">Previous Page</string>
    <string name="school_timetable">"mhGap Training Content "</string>
    <string name="complete_module">Complete Module …</string>
    <string name="firstt">Pre - Training Assessment</string>
    <string name="post_tra">Post Training Assessment</string>
    <string name="diagnosis_management"><![CDATA[Diagnosis & Management]]></string>
    <string name="does">Does Patient Have Dementia?</string>
    <string name="recommended_management">Recommended management</string>
    <string name="upload">UPLOAD</string>
    <string name="please_wait">Please wait while we upload %1$d records</string>
    <string name="final_diagnosis">Final diagnosis</string>
    <string name="recent_reco">Feedback on recent records</string>
    <string name="restart_quiz">Restart Quiz</string>
    <string name="diagnosis_severity">Diagnosis Severity</string>
    <string name="page_1_of_12">Page %1$d of %2$d</string>
    <string-array name="diagnosis">
        <item>Dementia Unlikely</item>
        <item>Delirium</item>
        <item>Depression</item>
        <item>Unusual dementia features</item>
        <item>Dementia with behavioural isssues</item>
        <item>Dementia</item>
    </string-array>

    <string-array name="diagnosis_severity">
        <item>Mild </item>
        <item>Moderate </item>
        <item>Severe </item>
    </string-array>
</resources>