<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="assessment"
            type="ug.global.ecap_code.database.AssessmentForm" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:text="@string/finish_assessement"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout31"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout31"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout31" />

            <ug.global.ecap_code.views.EcapTextHeader
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textStyle="bold"
                app:counter="2."
                app:header="@string/_2_signs_of_dementia"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchMaterial3" />

            <ug.global.ecap_code.views.EcapTextHeader
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="276dp"
                android:textStyle="bold"
                app:counter="1."
                app:header="@string/dementia_assessmet"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:checked="@={assessment.forgetfulness}"
                android:text="@string/forgetfulness"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchMaterial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:checked="@={assessment.apathy}"
                android:text="@string/apathy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch1" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchMaterial2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:checked="@={assessment.emotion}"
                android:text="@string/emotion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchMaterial" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchMaterial3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="192dp"
                android:checked="@={assessment.activities}"
                android:text="@string/activities"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchMaterial2" />

            <ug.global.ecap_code.views.EcapRadioGroup
                android:id="@+id/memoryGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:text="@string/memory_problems" />

            <ug.global.ecap_code.views.EcapRadioGroup
                android:id="@+id/activityGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/memoryGroup"
                app:text="@string/key_roles" />


            <ug.global.ecap_code.views.EcapRadioGroup
                android:id="@+id/progressingGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                app:text="@string/progressing" />


            <ug.global.ecap_code.views.EcapRadioGroup
                android:id="@+id/abruptGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressingGroup"
                app:text="@string/any_of" />

            <ug.global.ecap_code.views.EcapRadioGroup
                android:id="@+id/depressionGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/abruptGroup"
                app:text="@string/depress" />

            <ug.global.ecap_code.views.EcapRadioGroup
                android:id="@+id/ageGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                app:text="@string/other_any" />

            <ug.global.ecap_code.views.EcapRadioGroup
                android:id="@+id/anaemiaGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ageGroup"
                app:text="@string/anaemia">

            </ug.global.ecap_code.views.EcapRadioGroup>

            <ug.global.ecap_code.views.EcapTextHeader
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:textStyle="bold"
                app:counter="3."
                app:header="@string/_3_explanation_for_symptoms"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activityGroup" />

            <ug.global.ecap_code.views.EcapTextHeader
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:counter="4."
                app:header="@string/_4_other_medical_issues"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/depressionGroup">

            </ug.global.ecap_code.views.EcapTextHeader>

            <ug.global.ecap_code.views.EcapRadioGroup
                android:id="@+id/cardioVascular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/anaemiaGroup"
                app:text="@string/cardio">

            </ug.global.ecap_code.views.EcapRadioGroup>

            <ug.global.ecap_code.views.EcapTextHeader
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:textStyle="bold"
                app:counter="5."
                app:header="@string/caretaker_needs"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardioVascular" />


            <ug.global.ecap_code.views.EcapRadioGroup
                android:id="@+id/strainCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                app:text="@string/caretaker" />


            <ug.global.ecap_code.views.EcapRadioGroup
                android:id="@+id/depressedMood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/strainCode"
                app:text="@string/care_mood" />


            <ug.global.ecap_code.views.EcapRadioGroup
                android:id="@+id/incomeLoss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/depressedMood"
                app:text="@string/care_income" />

            <ug.global.ecap_code.views.EcapTextHeader
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:textStyle="bold"
                app:counter="6."
                app:header="@string/_5_behavioral_or_pyscological_symptoms"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/incomeLoss" />


            <ug.global.ecap_code.views.EcapRadioGroup
                android:id="@+id/symptomsGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                app:text="@string/behavior" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="activityGroup,progressingGroup,abruptGroup,depressionGroup,ageGroup,anaemiaGroup,textView8,textView9,cardioVascular,textView10,strainCode,depressedMood,incomeLoss,textView11,symptomsGroup"
                tools:visibility="visible" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="progressingGroup,abruptGroup,depressionGroup,ageGroup,anaemiaGroup,textView8,textView9,cardioVascular,textView10,strainCode,depressedMood,incomeLoss,textView11,symptomsGroup"
                tools:visibility="visible" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="depressionGroup,ageGroup,anaemiaGroup,textView9,cardioVascular,textView10,strainCode,depressedMood,incomeLoss,textView11,symptomsGroup"
                tools:visibility="visible" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="ageGroup,anaemiaGroup,textView9,cardioVascular,textView10,strainCode,depressedMood,incomeLoss,textView11,symptomsGroup"
                tools:visibility="visible" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="anaemiaGroup,cardioVascular,textView10,strainCode,depressedMood,incomeLoss,textView11,symptomsGroup"
                tools:visibility="visible" />

            <ug.global.ecap_code.views.EcapTextHeader
                android:id="@+id/ecapTextHeader4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:counter="7."
                app:header="@string/diagnosis_management"
                app:layout_constraintEnd_toEndOf="@+id/symptomsGroup"
                app:layout_constraintStart_toStartOf="@+id/symptomsGroup"
                app:layout_constraintTop_toBottomOf="@+id/symptomsGroup" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dementiaPatient"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ecapTextHeader4">

                <AutoCompleteTextView
                    android:id="@+id/diagnosis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/final_diagnosis" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout31"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/dementiaPatient"
                app:layout_constraintStart_toStartOf="@+id/dementiaPatient"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout32">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/management"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/recommended_management"
                    android:inputType="textCapSentences|textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout32"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                app:layout_constraintEnd_toEndOf="@+id/dementiaPatient"
                app:layout_constraintStart_toStartOf="@+id/dementiaPatient"
                app:layout_constraintTop_toBottomOf="@+id/dementiaPatient">

                <AutoCompleteTextView
                    android:id="@+id/severity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/diagnosis_severity" />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>